--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "mongo"
   ],
   "author": "mb",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "mongoose": "^4.11.3",
+    "morgan": "^1.8.2"
+  }
 }
