installed bcrypt, and encrypted the password coming from the post data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "mb",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongoose": "^4.11.3",
